# selenium-file-downloader-docker

./: Dockerfile  README.md  pyproject.toml
app/: app.py
